# BrawlFast

./: .env.example  ALGORITHM.md  ALL_OPTIMIZATIONS.md  DEDUPLICATION.md  DELIVERABLES.md  HTTP3.md  IMPLEMENTATION_COMPLETE.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  PREFETCHING.md  QUICKSTART.md  README.md  RUST_PERFORMANCE.md  TUNING.md  UI_CHANGES.md  api-spec.yaml  architecture.md  benchmark.js  jest.config.js  package-lock.json  package.json  search_code.py  server.js  wrangler.toml
.wrangler/tmp/bundle-50xXEF/: middleware-loader.entry.ts
.wrangler/tmp/bundle-FF4Uv9/: middleware-loader.entry.ts
.wrangler/tmp/bundle-IgZA0L/: middleware-loader.entry.ts
.wrangler/tmp/bundle-TcodUH/: middleware-loader.entry.ts
.wrangler/tmp/bundle-p35pnR/: middleware-loader.entry.ts
.wrangler/tmp/bundle-qlU7DB/: middleware-loader.entry.ts
.wrangler/tmp/bundle-slYrjU/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/dev-HOzU0T/: shim.js  (+1 more)
config/: mapFeatures.json  ranking.config.js
coverage/: index.html  lcov.info
coverage/BrawlFast/: index.html  server.js.html
coverage/lcov-report/: index.html
data/: pickRateSnapshots.json
lib/: brawlApi.js  changepoint.js  logger.js  mapFeatures.js  metrics.js  pickRateSnapshots.js  rankingEngine.js  rateLimiter.js  search.js  security.js  statistics.js  utils.js
public/: app.js  index.html
tests/: brawlApi.test.js  changepoint.test.js  mapFeatures.test.js  pickRateSnapshots.test.js  rankingEngine.test.js  server.test.js  statistics.test.js
worker/: Cargo.toml  seed-kv.mjs
worker/src/: lib.rs
(+27 files in other folders)
